automatically backed up by learn

--- a/css/paint.css
+++ b/css/paint.css
@@ -36,6 +36,11 @@ body {
   display: block;
 }
 
+#slick-wicked {
+  display: none;
+  
+}
+
 div#wall #tag-3.slick {
   background: url(../images/tag-3.png) no-repeat;
   z-index: 5;
